[project]
name = "sample-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Gayatri Kurulkar",email = "gayatri.kurulkar@coditas.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "bash (>=0.6,<0.7)"
]

[tool.poetry]
packages = [{include = "sample_poetry", from = "src"}]

[tool.poetry.scripts]
myscript = "sample_poetry:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
