[tool.poetry]
name = "run-main-plugin"
version = "0.1.0"
description = "Custom Poetry plugin"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.plugins."poetry.application.plugin"]
run-main = "run_main_plugin.run_main_plugin:RunMainPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
